Update docker stuff

--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -1,12 +1,18 @@
-FROM osrf/ros:jazzy-desktop
+FROM osrf/ros:jazzy-desktop-full
 
 SHELL ["/bin/bash", "-c"]
 
 WORKDIR /app
 
+RUN apt-get update && apt-get install -y \
+    ros-${ROS_DISTRO}-rqt-image-view
+    # rm -rf /var/lib/apt/lists/*
+
 COPY . ros2_ws/
 RUN cd ros2_ws && \
-    source /opt/ros/jazzy/setup.bash && \
+    rosdep update && \
+    rosdep install --from-paths src -y --ignore-src && \
+    source /opt/ros/${ROS_DISTRO}/setup.bash && \
     colcon build
 
 COPY ./docker_entrypoint.sh /
