Update docker scripts for raspberry pi

--- a/Dockerfile.rpi
+++ b/Dockerfile.rpi
@@ -1,8 +1,12 @@
-FROM osrf/ros:jazzy-desktop
+FROM arm64v8/ros:jazzy
 
 SHELL ["/bin/bash", "-c"]
 
 WORKDIR /app
+
+RUN apt update && apt install -y \
+    python3-gpiozero \
+    ros-${ROS_DISTRO}-librealsense2* ros-${ROS_DISTRO}-realsense2-*
 
 COPY . ros2_ws/
 RUN cd ros2_ws && \
