--- a/Dockerfile.rpi
+++ b/Dockerfile.rpi
@@ -6,13 +6,12 @@ WORKDIR /app
 
 RUN apt update && apt install -y \
     libgpiod-dev gpiod python3-libgpiod \
-    ros-${ROS_DISTRO}-librealsense2* ros-${ROS_DISTRO}-realsense2-*
+    ros-${ROS_DISTRO}-librealsense2* ros-${ROS_DISTRO}-realsense2-* \
+    v4l-utils ros-${ROS_DISTRO}-v4l2-camera ros-${ROS_DISTRO}-image-transport-plugins
 
-COPY src /app/src
+COPY . /app/
 
 RUN colcon build
 
-COPY ./docker_entrypoint.sh /
-
-ENTRYPOINT ["/docker_entrypoint.sh"]
+ENTRYPOINT ["/app/docker_entrypoint.sh"]
 CMD ["bash"]
