--- a/docker/rpi.compose.yml
+++ b/docker/rpi.compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   motors:
     container_name: robot-tank-rpi-motors
@@ -16,6 +14,22 @@ services:
       - /run/udev/:/run/udev/
     restart: unless-stopped
     command: ros2 launch rpi rpi.motors.launch.py
+  
+  lidar:
+    container_name: robot-tank-rpi-lidar
+    image: robot-tank-rpi
+    privileged: true
+    network_mode: "host"
+    environment:
+      - ROS_STATIC_PEERS=10.1.1.6
+    devices:
+      - /dev/serial0
+    volumes:
+      - /sys/class/gpio:/sys/class/gpio
+      - /dev:/dev
+      - /run/udev/:/run/udev/
+    restart: unless-stopped
+    command: ros2 launch rpi rpi.lidar.launch.py
 
   cam1:
     container_name: robot-tank-rpi-cam-1
