--- a/src/robot_description/CMakeLists.txt
+++ b/src/robot_description/CMakeLists.txt
@@ -24,7 +24,7 @@ if(BUILD_TESTING)
 endif()
 
 install(
-  DIRECTORY config description launch worlds
+  DIRECTORY config description launch worlds stl
   DESTINATION share/${PROJECT_NAME}
 )
 
