--- a/src/robot_tank_desc/config/gz_bridge.yaml
+++ b/src/robot_tank_desc/config/gz_bridge.yaml
@@ -48,8 +48,14 @@
   direction: GZ_TO_ROS
 
 # gz topic published by Sensors plugin (Camera)
-- ros_topic_name: "camera/camera_info"
-  gz_topic_name: "camera/camera_info"
+- ros_topic_name: "cam_1/camera_info"
+  gz_topic_name: "cam_1/camera_info"
+  ros_type_name: "sensor_msgs/msg/CameraInfo"
+  gz_type_name: "gz.msgs.CameraInfo"
+  direction: GZ_TO_ROS
+
+- ros_topic_name: "cam_2/camera_info"
+  gz_topic_name: "cam_2/camera_info"
   ros_type_name: "sensor_msgs/msg/CameraInfo"
   gz_type_name: "gz.msgs.CameraInfo"
   direction: GZ_TO_ROS
