--- a/docker/Dockerfile.server
+++ b/docker/Dockerfile.server
@@ -12,7 +12,7 @@ RUN apt-get update && apt-get install -y \
     ros-${ROS_DISTRO}-ros2-controllers \
     ros-${ROS_DISTRO}-joint-state-publisher \
     ros-${ROS_DISTRO}-xacro \
-    ros-${ROS_DISTRO}-joint-slam-toolbox \
+    ros-${ROS_DISTRO}-slam-toolbox \
     ros-${ROS_DISTRO}-navigation2 ros-${ROS_DISTRO}-nav2-bringup ros-${ROS_DISTRO}-nav2-minimal-tb*
     # rm -rf /var/lib/apt/lists/*
 
