--- a/src/robot_tank_desc/config/joystick.yaml
+++ b/src/robot_tank_desc/config/joystick.yaml
@@ -1,7 +1,7 @@
 joy_node:
   ros__parameters:
     device_id: 0
-    deadzone: 0.05
+    deadzone: 0.1
     autorepeat_rate: 20.0
 
 
@@ -15,7 +15,7 @@ teleop_node:
     scale_linear_turbo:
       x: 2.0
 
-    axis_angular:  # Left thumb stick horizontal
+    axis_angular:  # Right thumb stick horizontal
       yaw: 3
     scale_angular:
       yaw: 1.0
