--- a/docker/rpi.compose.yml
+++ b/docker/rpi.compose.yml
@@ -31,35 +31,35 @@ services:
     restart: unless-stopped
     command: ros2 launch rpi rpi.lidar.launch.py
 
-  cam1:
-    container_name: robot-tank-rpi-cam-1
-    image: robot-tank-rpi
-    privileged: true
-    network_mode: "host"
-    environment:
-      - ROS_STATIC_PEERS=10.1.1.6
-    volumes:
-      - /dev:/dev
-      - /run/udev/:/run/udev/
-    group_add:
-      - video
-    restart: unless-stopped
-    command: ros2 launch rpi rpi.cam1.launch.py
+  # cam1:
+  #   container_name: robot-tank-rpi-cam-1
+  #   image: robot-tank-rpi
+  #   privileged: true
+  #   network_mode: "host"
+  #   environment:
+  #     - ROS_STATIC_PEERS=10.1.1.6
+  #   volumes:
+  #     - /dev:/dev
+  #     - /run/udev/:/run/udev/
+  #   group_add:
+  #     - video
+  #   restart: unless-stopped
+  #   command: ros2 launch rpi rpi.cam1.launch.py
 
-  cam2:
-    container_name: robot-tank-rpi-cam-2
-    image: robot-tank-rpi
-    privileged: true
-    network_mode: "host"
-    environment:
-      - ROS_STATIC_PEERS=10.1.1.6
-    volumes:
-      - /dev:/dev
-      - /run/udev/:/run/udev/
-    group_add:
-      - video
-    restart: unless-stopped
-    command: ros2 launch rpi rpi.cam2.launch.py
+  # cam2:
+  #   container_name: robot-tank-rpi-cam-2
+  #   image: robot-tank-rpi
+  #   privileged: true
+  #   network_mode: "host"
+  #   environment:
+  #     - ROS_STATIC_PEERS=10.1.1.6
+  #   volumes:
+  #     - /dev:/dev
+  #     - /run/udev/:/run/udev/
+  #   group_add:
+  #     - video
+  #   restart: unless-stopped
+  #   command: ros2 launch rpi rpi.cam2.launch.py
 
   # cam1_servo:
   #   container_name: robot-tank-rpi-cam1-servo
