--- a/src/robot_tank_desc/config/mapper_params_online_async.yaml
+++ b/src/robot_tank_desc/config/mapper_params_online_async.yaml
@@ -25,26 +25,26 @@ slam_toolbox:
     #map_start_at_dock: true
 
     debug_logging: false
-    throttle_scans: 5
-    transform_publish_period: 0.005 #if 0 never publishes odometry
-    map_update_interval: 2.0
-    resolution: 0.07
-    max_laser_range: 10.0 #for rastering images
+    throttle_scans: 1
+    transform_publish_period: 0.1 #if 0 never publishes odometry
+    map_update_interval: 0.3
+    resolution: 0.03
+    max_laser_range: 20.0 #for rastering images
     minimum_time_interval: 0.5
     transform_timeout: 0.2
-    tf_buffer_duration: 1.0
-    stack_size_to_use: 4000000000 #// program needs a larger stack size to serialize large maps
+    tf_buffer_duration: 0.5
+    stack_size_to_use: 1000 #// program needs a larger stack size to serialize large maps
     enable_interactive_mode: true
 
     # General Parameters
     use_scan_matching: true
-    use_scan_barycenter: false
+    use_scan_barycenter: true
     minimum_travel_distance: 0.01
     minimum_travel_heading: 0.01
     scan_buffer_size: 10
     scan_buffer_maximum_scan_distance: 10.0
     link_match_minimum_response_fine: 0.1  
-    link_scan_maximum_distance: 1.5
+    link_scan_maximum_distance: 0.5
     loop_search_maximum_distance: 3.0
     do_loop_closing: false
     loop_match_minimum_chain_size: 10           
@@ -63,8 +63,8 @@ slam_toolbox:
     loop_search_space_smear_deviation: 0.03
 
     # Scan Matcher Parameters
-    distance_variance_penalty: 0.5      
-    angle_variance_penalty: 1.0    
+    distance_variance_penalty: 1.0
+    angle_variance_penalty: 10.0    
 
     fine_search_angle_offset: 0.00349     
     coarse_search_angle_offset: 0.349   
