--- a/docker/Dockerfile.rpi
+++ b/docker/Dockerfile.rpi
@@ -29,9 +29,14 @@ RUN mkdir -p /app/src && cd /app/src \
   && rosdep install -y --from-paths src --ignore-src --rosdistro $ROS_DISTRO --skip-keys=libcamera \
   && colcon build --event-handlers=console_direct+
 
-COPY ./src/rpi /app/src/rpi
+RUN apt update && apt install -y ros-${ROS_DISTRO}-slam-toolbox \
+    ros-${ROS_DISTRO}-navigation2 ros-${ROS_DISTRO}-nav2-bringup ros-${ROS_DISTRO}-nav2-minimal-tb*
 
-RUN colcon build
+COPY ./src /app/src
+
+RUN git clone https://github.com/joshnewans/twist_stamper.git
+
+RUN source /opt/ros/jazzy/setup.bash && colcon build --symlink-install
 
 COPY ./scripts/docker_entrypoint.sh /app/docker_entrypoint.sh
 
