--- a/src/robot_tank_desc/config/controllers.yaml
+++ b/src/robot_tank_desc/config/controllers.yaml
@@ -17,7 +17,8 @@ diff_cont:
 
     left_wheel_names: ['left_wheel_joint']
     right_wheel_names: ['right_wheel_joint']
-    wheel_separation: 0.245
+    # wheel_separation: 0.245  # Correct value
+    wheel_separation: 0.29  # Value to account for slippage
     wheel_radius: 0.0412
 
     # use_stamped_vel: false
