--- a/src/robot_tank_desc/config/mapper_params_online_async.yaml
+++ b/src/robot_tank_desc/config/mapper_params_online_async.yaml
@@ -25,23 +25,23 @@ slam_toolbox:
     #map_start_at_dock: true
 
     debug_logging: false
-    throttle_scans: 1
-    transform_publish_period: 0.1 #if 0 never publishes odometry
-    map_update_interval: 0.3
-    resolution: 0.03
-    max_laser_range: 20.0 #for rastering images
-    minimum_time_interval: 0.5
-    transform_timeout: 0.2
+    throttle_scans: 3
+    transform_publish_period: 0.01 #if 0 never publishes odometry
+    map_update_interval: 0.01
+    resolution: 0.1
+    max_laser_range: 10.0 #for rastering images
+    minimum_time_interval: 0.1
+    transform_timeout: 0.1
     tf_buffer_duration: 0.5
     stack_size_to_use: 1000 #// program needs a larger stack size to serialize large maps
     enable_interactive_mode: true
 
     # General Parameters
     use_scan_matching: true
-    use_scan_barycenter: true
-    minimum_travel_distance: 0.01
-    minimum_travel_heading: 0.01
-    scan_buffer_size: 10
+    use_scan_barycenter: false
+    minimum_travel_distance: 0.001
+    minimum_travel_heading: 0.001
+    scan_buffer_size: 5
     scan_buffer_maximum_scan_distance: 10.0
     link_match_minimum_response_fine: 0.1  
     link_scan_maximum_distance: 0.5
