--- a/src/robot_tank_desc/config/nav2_params.yaml
+++ b/src/robot_tank_desc/config/nav2_params.yaml
@@ -81,7 +81,7 @@ controller_server:
     # Progress checker parameters
     progress_checker:
       plugin: "nav2_controller::SimpleProgressChecker"
-      required_movement_radius: 0.5
+      required_movement_radius: 0.001
       movement_time_allowance: 10.0
     # Goal checker parameters
     #precise_goal_checker:
@@ -110,8 +110,8 @@ controller_server:
       vx_min: -0.35
       vy_max: 0.5
       wz_max: 1.9
-      iteration_count: 1
-      prune_distance: 1.7
+      iteration_count: 10
+      prune_distance: 1.0
       transform_tolerance: 0.1
       temperature: 0.3
       gamma: 0.015
@@ -130,36 +130,36 @@ controller_server:
       ConstraintCritic:
         enabled: true
         cost_power: 1
-        cost_weight: 4.0
+        cost_weight: 1.0
       GoalCritic:
         enabled: true
         cost_power: 1
-        cost_weight: 5.0
+        cost_weight: 1.0
         threshold_to_consider: 1.4
       GoalAngleCritic:
         enabled: true
         cost_power: 1
-        cost_weight: 3.0
+        cost_weight: 1.0
         threshold_to_consider: 0.5
       PreferForwardCritic:
         enabled: true
         cost_power: 1
-        cost_weight: 5.0
+        cost_weight: 1.0
         threshold_to_consider: 0.5
       CostCritic:
         enabled: true
         cost_power: 1
-        cost_weight: 3.81
-        near_collision_cost: 253
+        cost_weight: 1.0
+        near_collision_cost: 1
         critical_cost: 300.0
-        consider_footprint: false
-        collision_cost: 1000000.0
+        consider_footprint: true
+        collision_cost: 500.0
         near_goal_distance: 1.0
         trajectory_point_step: 2
       PathAlignCritic:
         enabled: true
         cost_power: 1
-        cost_weight: 14.0
+        cost_weight: 1.0
         max_path_occupancy_ratio: 0.05
         trajectory_point_step: 4
         threshold_to_consider: 0.5
@@ -168,39 +168,40 @@ controller_server:
       PathFollowCritic:
         enabled: true
         cost_power: 1
-        cost_weight: 5.0
+        cost_weight: 1.0
         offset_from_furthest: 5
         threshold_to_consider: 1.4
       PathAngleCritic:
         enabled: true
         cost_power: 1
-        cost_weight: 2.0
+        cost_weight: 1.0
         offset_from_furthest: 4
         threshold_to_consider: 0.5
         max_angle_to_furthest: 1.0
         mode: 0
-      # TwirlingCritic:
-      #   enabled: true
-      #   twirling_cost_power: 1
-      #   twirling_cost_weight: 10.0
+      TwirlingCritic:
+        enabled: true
+        twirling_cost_power: 1
+        twirling_cost_weight: 1.0
 
 local_costmap:
   local_costmap:
     ros__parameters:
-      update_frequency: 5.0
-      publish_frequency: 2.0
+      update_frequency: 10.0
+      publish_frequency: 10.0
       global_frame: odom
       robot_base_frame: base_link
       rolling_window: true
       width: 3
       height: 3
-      resolution: 0.05
-      robot_radius: 0.22
+      resolution: 0.1
+      # robot_radius: 0.1
+      footprint: "[[-0.1, -0.1], [-0.1, 0.1], [0.1, 0.1], [0.1, -0.1]]"
       plugins: ["voxel_layer", "inflation_layer"]
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
-        cost_scaling_factor: 3.0
-        inflation_radius: 0.70
+        cost_scaling_factor: 0.01
+        inflation_radius: 0.16
       voxel_layer:
         plugin: "nav2_costmap_2d::VoxelLayer"
         enabled: True
@@ -209,7 +210,7 @@ local_costmap:
         z_resolution: 0.05
         z_voxels: 16
         max_obstacle_height: 2.0
-        mark_threshold: 0
+        mark_threshold: 10
         observation_sources: scan
         scan:
           topic: /scan
@@ -233,7 +234,8 @@ global_costmap:
       publish_frequency: 10.0
       global_frame: map
       robot_base_frame: base_link
-      robot_radius: 0.022
+      # robot_radius: 0.1
+      footprint: "[[-0.1, -0.1], [-0.1, 0.1], [0.1, 0.1], [0.1, -0.1]]"
       resolution: 0.1
       track_unknown_space: true
       plugins: ["static_layer", "obstacle_layer", "inflation_layer"]
@@ -257,7 +259,7 @@ global_costmap:
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 0.01
-        inflation_radius: 0.5
+        inflation_radius: 0.16
       always_send_full_costmap: True
 
 # The yaml_filename does not need to be specified since it going to be set by defaults in launch.
@@ -364,7 +366,7 @@ collision_monitor:
       type: "polygon"
       action_type: "approach"
       footprint_topic: "/local_costmap/published_footprint"
-      time_before_collision: 1.2
+      time_before_collision: 0.1
       simulation_time_step: 0.1
       min_points: 6
       visualize: False
