--- a/docker/rpi.compose.yml
+++ b/docker/rpi.compose.yml
@@ -1,4 +1,21 @@
 services:
+  robot_tank_desc:
+    container_name: robot-tank-robot-desc
+    image: robot-tank-rpi
+    privileged: true
+    network_mode: "host"
+    environment:
+      - ROS_STATIC_PEERS=10.1.1.6
+    devices:
+      - /dev/serial0
+    volumes:
+      - /home/selexin/robot_rover/src:/app/src
+      - /sys/class/gpio:/sys/class/gpio
+      - /dev:/dev
+      - /run/udev/:/run/udev/
+    restart: unless-stopped
+    command: ros2 launch robot_tank_desc robot_nav.launch.py
+
   motors:
     container_name: robot-tank-rpi-motors
     image: robot-tank-rpi
@@ -50,25 +67,8 @@ services:
     restart: unless-stopped
     command: ros2 launch rpi rpi.encoder2.launch.py
   
-
   lidar:
     container_name: robot-tank-rpi-lidar
-    image: robot-tank-rpi
-    privileged: true
-    network_mode: "host"
-    environment:
-      - ROS_STATIC_PEERS=10.1.1.6
-    devices:
-      - /dev/serial0
-    volumes:
-      - /sys/class/gpio:/sys/class/gpio
-      - /dev:/dev
-      - /run/udev/:/run/udev/
-    restart: unless-stopped
-    command: ros2 launch rpi rpi.lidar.launch.py
-
-  robot_tank_desc:
-    container_name: robot-tank-robot-desc
     image: robot-tank-rpi
     privileged: true
     network_mode: "host"
@@ -82,7 +82,7 @@ services:
       - /dev:/dev
       - /run/udev/:/run/udev/
     restart: unless-stopped
-    command: ros2 launch robot_tank_desc robot_nav.launch.py
+    command: ros2 launch rpi rpi.lidar.launch.py
   
   # cam1:
   #   container_name: robot-tank-rpi-cam-1
